[package]
name = "para"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
camino = { version = "1.1.3", features = ["serde1"] }
clap = { version = "4.1.8", features = ["derive", "color"] }
farve = "0.1.3"
json_comments = "0.2.1"
owo-colors = { version = "3.5.0", features = ["supports-color"] }
rayon = "1.7.0"
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
