[package]
name = "para"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
camino = { version = "1.1.3", features = ["serde1"] }
clap = { version = "4.1.8", features = [
    "derive",
    "color",
    "wrap_help",
    "unicode",
] }
clean-path = "0.2.1"
directories = "4.0.1"
farve = "0.1.3"
globset = "0.4.10"
json_comments = "0.2.1"
lazy_static = "1.4.0"
owo-colors = { version = "3.5.0", features = ["supports-color"] }
rayon = "1.7.0"
regex = "1.7.1"
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
sha2 = "0.10.6"
